feat: add .gitignore and SQL migration for missing tables and indexes